--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 layout: home
 author_profile: true
 ---
+excerpt: "Instructions on how to install and customize the Jekyll theme Minimal Mistakes."
+image:	
+  feature: /assets/images/cover.jpg
